# ghcr-badge

./: .gitignore  .pre-commit-config.yaml  .spaceignore  Discovery.md  Dockerfile  LICENSE.txt  Procfile  README.md  Spacefile  cspell.json  ghcr_badge.html  gunicorn.conf.py  index.html  launch.sh  main.py  mise.toml  publish.sh  pyproject.toml  render.yaml  requirements.txt  search.js  setup.cfg
.deta/: prog_info  state
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yml
ghcr_badge/: __init__.py  dicts.py  generate.py  main.py  server.py
ghcr_badge/templates/: index.j2
tests/: __init__,py  test_dicts.py  test_generate.py  test_main.py  test_server.py
