[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "ghcr-badge"
version = "0.5.0"
description = "Generate ghcr.io container's status badge"
readme = "README.md"
keywords = [
  "badge",
  "ghcr",
  "github-container-registry",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "anybadge>=1.16,<2",
  "flask>=3.1,<4",
  "gunicorn>=23,<24",
  "humanfriendly>=10,<11",
  "requests>=2.32.3,<3",
  "types-humanfriendly>=10.0.1.20241221,<11",
  "types-requests>=2.32.0.20241016,<3",
  "typing-extensions>=4.12.2,<5",
  "waitress>=3.0.2,<4",
]
urls.Repository = "https://github.com/eggplants/ghcr-badge"
scripts.ghcr-badge = "ghcr_badge.main:main"
scripts.ghcr-badge-server = "ghcr_badge.server:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "ghcr_badge" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.16"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

select = [
  "ALL",
]
ignore = [
  "D203", # no-blank-line-before-class
  "D213", # multi-line-summary-second-line
]
mccabe.max-complexity = 18

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.djlint]
format_css = true
format_js = true
indent = 2
css.indent_size = 2
js.indent_size = 2

[tool.taskipy.tasks]
lint = "pre-commit run -a"
profile = "python -m cProfile"
dev = "FLASK_ENV=development gunicorn --reload"
