[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "ghcr-badge"
version = "1.0.1"
description = "Generate ghcr.io container's status badge"
readme = "README.md"
keywords = [
  "badge",
  "ghcr",
  "github-container-registry",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.10,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "anybadge>=1.16,<2",
  "flask>=3.1,<4",
  "gunicorn>=23,<24",
  "humanfriendly>=10,<11",
  "requests>=2.32.3,<3",
  "types-humanfriendly>=10.0.1.20241221,<11",
  "types-requests>=2.32.0.20241016,<3",
  "types-waitress>=3.0.1.20250801",
  "typing-extensions>=4.12.2,<5",
  "waitress>=3.0.2,<4",
]

urls.Repository = "https://github.com/eggplants/ghcr-badge"
scripts.ghcr-badge = "ghcr_badge.main:main"
scripts.ghcr-badge-server = "ghcr_badge.server:main"

[dependency-groups]
dev = [
  "djlint>=1.36.4",
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "ghcr_badge" ]

[tool.hatch.build.targets.wheel]
include = [ "ghcr_badge" ]

[tool.uv]
preview = true
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812",
  "D203",   # no-blank-line-before-class
  "D213",   # multi-line-summary-second-line
]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[tool.djlint]
format_css = true
format_js = true
indent = 2
css.indent_size = 2
js.indent_size = 2
