[metadata]
name = ghcr_badge
version = attr: ghcr_badge.__version__
description = Generate ghcr.io container's status badge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/ghcr-badge
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    anybadge==1.9.0
    flask==2.1.2
    gunicorn==20.1.0
    humanfriendly==10.0
    requests==2.28.0
    types-Flask
    types-humanfriendly
    types-requests
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    ghcr-badge-server = ghcr_badge.server:main
    ghcr-badge = ghcr_badge.main:main

[options.extras_require]
dev =
    pre-commit

[options.package_data]
ghcr_badge = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
